kubernetes/archive/deploy/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: homarr
spec:
  rules:
  - host: homarr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: homarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
